# formassist

./: .gitignore  index.html  package-lock.json  package.json  prompt formassist.pages  tailwind.config.ts
.github/workflows/: build-windows.yml  build.yml  supabase-keepalive.yml
scripts/: generate_icon.py
src/: App.tsx  Router.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_dossiers.sql  003_deroulement.sql  004_group_corrections.sql  005_import_source.sql  006_invoice_pro_info.sql  007_savoirs.sql  008_tva_intracom.sql  009_livre_recettes.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  config.rs  crypto_cmd.rs  docx_pdf.rs  email.rs  files.rs  mod.rs  reac.rs  system.rs
src-tauri/src/crypto/: argon2_crypto.rs  mod.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/mail/: smtp.rs
src/components/: ErrorToast.tsx
src/components/help/: HelpBanner.tsx
src/components/layout/: AppShell.tsx  CentreSelector.tsx  Header.tsx  Sidebar.tsx  navConfig.ts
src/components/ui/: alert.tsx  button.tsx  confirm-dialog.tsx  download-toast.tsx  input.tsx  progress.tsx  rich-markdown.tsx  select.tsx  separator.tsx
src/config/: models.ts
src/features/apprenants/: ApprenantsPage.tsx  LearnerDetailDialog.tsx
src/features/auth/: LockScreen.tsx  SetupPassword.tsx
src/features/centres/: CentreFormDialog.tsx  CentresPage.tsx
src/features/cloud/: CloudRestoreScreen.tsx
src/features/correction/: CorrectionDetailDialog.tsx  CorrectionsPage.tsx
src/hooks/: useAutoLock.ts  useOnline.ts
src/lib/: claude.ts  cloud-backup.ts  crypto.ts  db.ts  docx-export.ts  docx-to-pdf.ts  email-compose.ts  errorHandler.ts  license.ts  livre-recettes-xlsx.ts  pdf-export.ts  professional-info.ts  theme.ts  utils.ts
src/prompts/: _format_document.ts  affinage_style.ts  analyse_style.ts  correction_dossier.ts  correction_exercice.ts  generation_cours.ts  generation_exercice_collectif.ts  generation_exercice_individuel.ts  generation_exercice_petit_groupe.ts  generation_fiche_pedagogique.ts  generation_jeu_pedagogique.ts  generation_mise_en_situation.ts  index.ts  mail_coordinateur.ts  parsing_planning.ts  parsing_reac.ts  parsing_repartition.ts  prefill_deroulement.ts  recommandations_dashboard.ts
src/stores/: appStore.ts
src/types/: api.ts  centre.ts  content.ts  correction.ts  formation.ts  index.ts  invoice.ts  learner.ts  planning.ts  reac.ts  style.ts
(+38 files in other folders)
